hw2/simple-expr.output
State 2 conflicts: 2 shift/reduce
State 4 conflicts: 2 shift/reduce
State 12 conflicts: 2 shift/reduce


Grammar

    0 $accept: statements $end

    1 statements: statement
    2           | statement NEWLINE
    3           | statements statement NEWLINE
    4           | statement statements

    5 statement: NAME '=' expression
    6          | expression

    7 expression: expression '+' NUMBER
    8           | expression '-' NUMBER
    9           | NUMBER '-' NUMBER
   10           | NUMBER '+' NUMBER
   11           | NUMBER


Terminals, with rules where they appear

$end (0) 0
'+' (43) 7 10
'-' (45) 8 9
'=' (61) 5
error (256)
NAME (258) 5
NUMBER (259) 7 8 9 10 11
NEWLINE (260) 2 3


Nonterminals, with rules where they appear

$accept (9)
    on left: 0
statements (10)
    on left: 1 2 3 4, on right: 0 3 4
statement (11)
    on left: 5 6, on right: 1 2 3 4
expression (12)
    on left: 7 8 9 10 11, on right: 5 6 7 8


State 0

    0 $accept: . statements $end

    NAME    shift, and go to state 1
    NUMBER  shift, and go to state 2

    statements  go to state 3
    statement   go to state 4
    expression  go to state 5


State 1

    5 statement: NAME . '=' expression

    '='  shift, and go to state 6


State 2

    9 expression: NUMBER . '-' NUMBER
   10           | NUMBER . '+' NUMBER
   11           | NUMBER .

    '+'  shift, and go to state 7
    '-'  shift, and go to state 8

    '+'       [reduce using rule 11 (expression)]
    '-'       [reduce using rule 11 (expression)]
    $default  reduce using rule 11 (expression)


State 3

    0 $accept: statements . $end
    3 statements: statements . statement NEWLINE

    $end    shift, and go to state 9
    NAME    shift, and go to state 1
    NUMBER  shift, and go to state 2

    statement   go to state 10
    expression  go to state 5


State 4

    1 statements: statement .
    2           | statement . NEWLINE
    4           | statement . statements

    NAME     shift, and go to state 1
    NUMBER   shift, and go to state 2
    NEWLINE  shift, and go to state 11

    NAME      [reduce using rule 1 (statements)]
    NUMBER    [reduce using rule 1 (statements)]
    $default  reduce using rule 1 (statements)

    statements  go to state 12
    statement   go to state 4
    expression  go to state 5


State 5

    6 statement: expression .
    7 expression: expression . '+' NUMBER
    8           | expression . '-' NUMBER

    '+'  shift, and go to state 13
    '-'  shift, and go to state 14

    $default  reduce using rule 6 (statement)


State 6

    5 statement: NAME '=' . expression

    NUMBER  shift, and go to state 2

    expression  go to state 15


State 7

   10 expression: NUMBER '+' . NUMBER

    NUMBER  shift, and go to state 16


State 8

    9 expression: NUMBER '-' . NUMBER

    NUMBER  shift, and go to state 17


State 9

    0 $accept: statements $end .

    $default  accept


State 10

    3 statements: statements statement . NEWLINE

    NEWLINE  shift, and go to state 18


State 11

    2 statements: statement NEWLINE .

    $default  reduce using rule 2 (statements)


State 12

    3 statements: statements . statement NEWLINE
    4           | statement statements .

    NAME    shift, and go to state 1
    NUMBER  shift, and go to state 2

    NAME      [reduce using rule 4 (statements)]
    NUMBER    [reduce using rule 4 (statements)]
    $default  reduce using rule 4 (statements)

    statement   go to state 10
    expression  go to state 5


State 13

    7 expression: expression '+' . NUMBER

    NUMBER  shift, and go to state 19


State 14

    8 expression: expression '-' . NUMBER

    NUMBER  shift, and go to state 20


State 15

    5 statement: NAME '=' expression .
    7 expression: expression . '+' NUMBER
    8           | expression . '-' NUMBER

    '+'  shift, and go to state 13
    '-'  shift, and go to state 14

    $default  reduce using rule 5 (statement)


State 16

   10 expression: NUMBER '+' NUMBER .

    $default  reduce using rule 10 (expression)


State 17

    9 expression: NUMBER '-' NUMBER .

    $default  reduce using rule 9 (expression)


State 18

    3 statements: statements statement NEWLINE .

    $default  reduce using rule 3 (statements)


State 19

    7 expression: expression '+' NUMBER .

    $default  reduce using rule 7 (expression)


State 20

    8 expression: expression '-' NUMBER .

    $default  reduce using rule 8 (expression)
